Ability to add stream/dataset in CDAP Programs